--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../MoGo/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap"
         rel="stylesheet">
@@ -78,7 +78,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/about-1.jpg" alt="">
+                            <img src="../MoGo/images/about-1.jpg" alt="">
                         </div>
                         <div class="card_text">super team</div>
                     </div>
@@ -87,7 +87,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/about-2.jpg" alt="">
+                            <img src="../MoGo/images/about-2.jpg" alt="">
                         </div>
                         <div class="card_text">super team</div>
                     </div>
@@ -96,7 +96,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/about-3.jpg" alt="">
+                            <img src="../MoGo/images/about-3.jpg" alt="">
                         </div>
 
                         <div class="card_text">super team</div>
@@ -143,21 +143,21 @@
             </div>
             <div class="services">
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/photography.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/photography.png" alt="">
 
                     <div class="services_title">Photography</div>
                     <div class="services_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor.</div>
                 </div>
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/webdesign.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/webdesign.png" alt="">
 
                     <div class="services_title">Web Design</div>
                     <div class="services_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                     </div>
                 </div>
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/creativity.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/creativity.png" alt="">
 
                     <div class="services_title">Creativity</div>
                     <div class="services_text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
@@ -166,19 +166,19 @@
             <hr>
             <div class="services">
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/seo.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/seo.png" alt="">
 
                     <div class="services_title">seo</div>
                     <div class="services_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</div>
                 </div>
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/css-html.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/css-html.png" alt="">
 
                     <div class="services_title">CSS/HTML</div>
                     <div class="services_text">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</div>
                 </div>
                 <div class="services_item">
-                    <img class="services_icon" src="assets/images/services/digital.png" alt="">
+                    <img class="services_icon" src="../MoGo/images/services/digital.png" alt="">
 
                     <div class="services_title">digital</div>
                     <div class="services_text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
@@ -199,8 +199,8 @@
                 <h2 class="section_title">Unique design</h2>
             </div>
             <div class="devices">
-                <img class="devices_item" src="assets/images/ios/ipad.png" alt="">
-                <img class="devices_item  devices--iphone" src="assets/images/ios/iphone.png" alt="">
+                <img class="devices_item" src="../MoGo/images/ios/ipad.png" alt="">
+                <img class="devices_item  devices--iphone" src="../MoGo/images/ios/iphone.png" alt="">
             </div>
 
         </div>
@@ -224,13 +224,13 @@
 
             <div class="wedo">
                 <div class="wedo-item">
-                    <img src="../mogo/assets/images/mujik.png" alt="">
+                    <img src="../MoGo/images/mujik.png" alt="">
                 </div>
                 <div class="wedo-item">
                     <div class="accordion">
                         <div class="accordion_item">
                             <div class="accordion_header">
-                                <img class="accordion_icon" src="../mogo/assets/images/icon_wedo/Photography.png"
+                                <img class="accordion_icon" src="../MoGo/images/icon_wedo/Photography.png"
                                     alt="">
                                 <div class="accordion_title">Photography</div>
                             </div>
@@ -246,7 +246,7 @@
 
                         <div class="accordion_item active">
                             <div class="accordion_header">
-                                <img class="accordion_icon" src="../mogo/assets/images/icon_wedo/creativity.png" alt="">
+                                <img class="accordion_icon" src="../MoGo/images/icon_wedo/creativity.png" alt="">
                                 <div class="accordion_title">Creativity</div>
                             </div>
                             <div class="accordion_content">
@@ -261,7 +261,7 @@
 
                         <div class="accordion_item">
                             <div class="accordion_header">
-                                <img class="accordion_icon" src="../mogo/assets/images/icon_wedo/web-design.png" alt="">
+                                <img class="accordion_icon" src="../MoGo/images/icon_wedo/web-design.png" alt="">
                                 <div class="accordion_title">Web Design</div>
                             </div>
                             <div class="accordion_content">
@@ -318,7 +318,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/meet our team/Graphic Design.png" alt="">
+                            <img src="../MoGo/images/meet our team/Graphic Design.png" alt="">
                         </div>
                         <div class="card_text">
                             <div class="social">
@@ -346,7 +346,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/meet our team/BrandingUX design.png" alt="">
+                            <img src="../MoGo/images/meet our team/BrandingUX design.png" alt="">
                         </div>
                         <div class="card_text">
                             <div class="social">
@@ -374,7 +374,7 @@
                 <div class="card_item">
                     <div class="card_inner">
                         <div class="card_img">
-                            <img src="assets/images/meet our team/Developer.png" alt="">
+                            <img src="../MoGo/images/meet our team/Developer.png" alt="">
                         </div>
                         <div class="card_text">
                             <div class="social">
@@ -407,27 +407,41 @@
 
             <div class="logos">
                 <div class="logos_item">
-                    <img src="assets/images/logos/1.png" alt="">
+                    <img src="../MoGo/images/logos/1.png" alt="">
                 </div>
                 <div class="logos_item">
-                    <img src="assets/images/logos/2.png" alt="">
+                    <img src="../MoGo/images/logos/2.png" alt="">
                 </div>
                 <div class="logos_item">
-                    <img src="assets/images/logos/3.png" alt="">
+                    <img src="../MoGo/images/logos/3.png" alt="">
                 </div>
                 <div class="logos_item">
-                    <img src="assets/images/logos/4.png" alt="">
+                    <img src="../MoGo/images/logos/4.png" alt="">
                 </div>
                 <div class="logos_item">
-                    <img src="assets/images/logos/5.png" alt="">
+                    <img src="../MoGo/images/logos/5.png" alt="">
                 </div>
                 <div class="logos_item">
-                    <img src="assets/images/logos/6.png" alt="">
+                    <img src="../MoGo/images/logos/6.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-
+    <section>
+        <div class="container">
+            <div class="section_header">
+                <h3 class="section_suptitle">Who we are</h3>
+                <h2 class="section_title">Meet our team</h2>
+                <div class="section_text">
+                    <p class="mind_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+<!-- ИСПРАВИТЬ РАСПОЛОЖЕНИЕ КАРТИНОК -->
 </body>
 
 </html>
