--- a/index.html
+++ b/index.html
@@ -230,8 +230,7 @@
                     <div class="accordion">
                         <div class="accordion_item">
                             <div class="accordion_header">
-                                <img class="accordion_icon" src="../MoGo/images/icon_wedo/Photography.png"
-                                    alt="">
+                                <img class="accordion_icon" src="../MoGo/images/icon_wedo/Photography.png" alt="">
                                 <div class="accordion_title">Photography</div>
                             </div>
                             <div class="accordion_content">
@@ -290,7 +289,7 @@
                 <a class="reviews_btn reviews_btn--prev" href="#">Prev</a>
                 <a class="reviews_btn reviews_btn--next" href="#">Next</a>
                 <div class="reviews_item">
-                    <img class="reviews_photo" src="https://via.placeholder.com/145x145" alt="">
+                    <img class="reviews_photo" src="../MoGo/images/menu.png" alt="">
                     <div class="reviews_text">
                         “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</div>
@@ -427,21 +426,102 @@
             </div>
         </div>
     </div>
-    <section>
+    <section class="section">
         <div class="container">
-            <div class="section_header">
-                <h3 class="section_suptitle">Who we are</h3>
-                <h2 class="section_title">Meet our team</h2>
+            <div id="mind_text" class="section_header">
+                <h3 class="section_suptitle">What we do copy</h3>
+                <h2 class="section_title">some of our work</h2>
                 <div class="section_text">
                     <p class="mind_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. </p>
+                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
                 </div>
             </div>
+
         </div>
+        <div class="works">
+            <div class="works_col">
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/1.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/2.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works_col">
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/3.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/4.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works_col">
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/5.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+            <div class="works_col">
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/6.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+                <div class="works_item">
+                    <img class="works_image" src="../MoGo/images/works/7.png" alt="">
+                    <div class="works_info">
+                        <div class="works_title">creatively designed</div>
+                        <div class="works_text">Lorem ipsum dolor sit</div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- /.works   -->
+
+        <div class="section">
+            <div class="container">
+
+                <div class="reviews">
+                    <a class="reviews_btn reviews_btn--prev" href="#">Prev</a>
+                    <a class="reviews_btn reviews_btn--next" href="#">Next</a>
+                    <div class="reviews_item">
+                        <img id="sqa_photo" class="reviews_photo_works" src="../MoGo/images/avatar.png" alt="">
+                        <div class="reviews_text">
+                            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</div>
+                        <div class="reviews_author">Jon Doe</div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
     </section>
-<!-- ИСПРАВИТЬ РАСПОЛОЖЕНИЕ КАРТИНОК -->
 </body>
 
 </html>
