Новая секция с людьми
Добавлены clients_prof clients_name clients_text и фон

--- a/index.html
+++ b/index.html
@@ -518,8 +518,54 @@
 
             </div>
         </div>
+    </section>
+    <section class="section section--clients">
+        <div class="container">
+            <div id="mind_text" class="section_header">
+                <h3 class="section_suptitle">Happy Clients</h3>
+                <h2 class="section_title">What people say</h2>
+            </div>
+            <div class="clients">
+                <div class="clients_item">
+                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <div class="clients_content">
+                        <div class="clients_name">Matthew Dix</div>
+                        <div class="clients_prof">Graphic Design</div>
+                        <div class="clients_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+                    </div>
+                </div>
+                <div class="clients_item">
+                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <div class="clients_content">
+                        <div class="clients_name">Nick Karvounis</div>
+                        <div class="clients_prof">Graphic Design</div>
+                        <div class="clients_text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                    </div>
+                </div>
+                <div class="clients_item">
+                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <div class="clients_content">
+                        <div class="clients_name">Jaelynn Castillo </div>
+                        <div class="clients_prof">Graphic Design</div>
+                        <div class="clients_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
+                    </div>
+                </div>
+                
+                <div class="clients_item">
+                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <div class="clients_content">
+                        <div class="clients_name">Mike Petrucci</div>
+                        <div class="clients_prof">Graphic Design</div>
+                        <div class="clients_text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</div>
+                    </div>
+                </div>
 
-
+            </div> <!-- /.clients -->
+        </div> <!-- /.container  -->
 
     </section>
 </body>
