--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
             </div>
             <div class="clients">
                 <div class="clients_item">
-                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <img class="clients_photo" src="../MoGo/images/images/1.png" alt="">
                     <div class="clients_content">
                         <div class="clients_name">Matthew Dix</div>
                         <div class="clients_prof">Graphic Design</div>
@@ -536,7 +536,7 @@
                     </div>
                 </div>
                 <div class="clients_item">
-                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <img class="clients_photo" src="../MoGo/images/images/2.png" alt="">
                     <div class="clients_content">
                         <div class="clients_name">Nick Karvounis</div>
                         <div class="clients_prof">Graphic Design</div>
@@ -545,7 +545,7 @@
                     </div>
                 </div>
                 <div class="clients_item">
-                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <img class="clients_photo" src="../MoGo/images/images/3.png" alt="">
                     <div class="clients_content">
                         <div class="clients_name">Jaelynn Castillo </div>
                         <div class="clients_prof">Graphic Design</div>
@@ -553,9 +553,9 @@
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</div>
                     </div>
                 </div>
-                
+
                 <div class="clients_item">
-                    <img class="clients_photo" src="https://via.placeholder.com/110" alt="">
+                    <img class="clients_photo" src="../MoGo/images/images/4.png" alt="">
                     <div class="clients_content">
                         <div class="clients_name">Mike Petrucci</div>
                         <div class="clients_prof">Graphic Design</div>
@@ -567,6 +567,39 @@
             </div> <!-- /.clients -->
         </div> <!-- /.container  -->
 
+    </section>
+    <section class="section">
+        <div class="container">
+            <div id="mind_text" class="section_header">
+                <h3 class="section_suptitle">Our stories</h3>
+                <h2 class="section_title">Latest blog</h2>
+            </div>
+            <div class="blog">
+                <div class="blog_item">
+                    <div class="blog_header">
+                        <a href="#">
+                            <img class="blog_photo" src="../MoGo/images/blog_photo/woman.jpg" alt="">
+                        </a>
+                        <div class="blog_date">
+                            <div class="blog_date_day">15</div>Jan
+
+                        </div>
+                    </div>
+                    <div class="blog_content">
+                        <div class="blog_title">
+                            <a href="#">Lorem ipsum dolor sit amet</a>
+                        </div>
+                        <div class="blog_text">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                            et dolore magna aliqua.</div>
+
+                    </div>
+                    <div class="blog_footer">
+                        <span>542</span>
+                        <span>17</span>
+                    </div>
+                </div>
+            </div> <!-- /.blog -->
+        </div> <!-- /.container -->
     </section>
 </body>
 
