--- a/index.html
+++ b/index.html
@@ -594,10 +594,76 @@
 
                     </div>
                     <div class="blog_footer">
-                        <span>542</span>
-                        <span>17</span>
+                        <div class="blog_stat">
+                            <span class="blog-stat_item">
+                                <i class="fas fa-eye"></i>
+                                542</span>
+                            <span class="blog-stat_item">
+                                <i class="fas fa-comment-dots"></i>
+                                17</span>
+                        </div>
                     </div>
                 </div>
+                <div class="blog_item">
+                    <div class="blog_header">
+                        <a href="#">
+                            <img class="blog_photo" src="../MoGo/images/blog_photo/desctop.jpg" alt="">
+                        </a>
+                        <div class="blog_date">
+                            <div class="blog_date_day">14</div>Jan
+
+                        </div>
+                    </div>
+                    <div class="blog_content">
+                        <div class="blog_title">
+                            <a href="#">sed do eiusmod tempor</a>
+                        </div>
+                        <div class="blog_text">Adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et </div>
+
+                    </div>
+                    <div class="blog_footer">
+                        <div class="blog_stat">
+                            <span class="blog-stat_item">
+                                <i class="fas fa-eye"></i>
+                                992</span>
+                            <span class="blog-stat_item">
+                                <i class="fas fa-comment-dots"></i>
+                                42</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog_item">
+                    <div class="blog_header">
+                        <a href="#">
+                            <img class="blog_photo" src="../MoGo/images/blog_photo/man.jpg" alt="">
+                        </a>
+                        <div class="blog_date">
+                            <div class="blog_date_day">12</div>Jan
+
+                        </div>
+                    </div>
+                    <div class="blog_content">
+                        <div class="blog_title">
+                            <a href="#">incididunt ut labore et dolore</a>
+                        </div>
+                        <div class="blog_text">Elit, sed do eiusmod tempor incididunt
+                            ut labore et dolore magna aliqua.</div>
+
+                    </div>
+                    <div class="blog_footer">
+                        <div class="blog_stat">
+                            <span class="blog-stat_item">
+                                <i class="fas fa-eye"></i>
+                                1560</span>
+                            <span class="blog-stat_item">
+                                <i class="fas fa-comment-dots"></i>
+                                98</span>
+                        </div>
+                    </div>
+                </div>
+
             </div> <!-- /.blog -->
         </div> <!-- /.container -->
     </section>
