--- a/index.html
+++ b/index.html
@@ -667,6 +667,16 @@
             </div> <!-- /.blog -->
         </div> <!-- /.container -->
     </section>
+    <section class="section section--map">
+        <div class="container">
+            <div class="map">
+                <h2 class="map_title">
+                    <div><i class="fas fa-map-marker-alt"></i></div>
+                    <a href="https://goo.gl/maps/nhhsm4CbYGgaWSCG8" target="blank">Open Map</a>
+                </h2>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
