--- a/index.html
+++ b/index.html
@@ -672,11 +672,69 @@
             <div class="map">
                 <h2 class="map_title">
                     <div><i class="fas fa-map-marker-alt"></i></div>
-                    <a href="https://goo.gl/maps/nhhsm4CbYGgaWSCG8" target="blank">Open Map</a>
+                    <a href="https://goo.gl/maps/nhhsm4CbYGgaWSCG8" target="_blank">Open Map</a>
                 </h2>
             </div>
         </div>
     </section>
+
+
+
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_inner">
+                <div class="footer_col">
+                    <div class="footer_logo">MoGo</div>
+                    <div class="footer_text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat.</div>
+                    <div class="footer_social">
+                        <div class="footer_social-header">
+                            <b>15k</b> followers
+                        </div>
+                        <div class="footer_social-content">
+                            Follow Us:
+                            <a href="#" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-pinterest-p"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-google-plus-g"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-dribbble"></i>
+                            </a>
+                            <a href="#" target="_blank">
+                                <i class="fab fa-tumblr"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <form class="subscribe" action="/" method="POST">
+                        <input class="subscribe_input" type="email" name="name" placeholder="Your Email...">
+                        <button class="subscribe_btn" type="submit">subscribe</button>
+                    </form>
+                </div>
+            </div> <!-- ./footer_inner -->
+
+        </div> <!-- ./container -->
+    </footer>
+
+
+
 </body>
 
 </html>
