--- a/index.html
+++ b/index.html
@@ -684,12 +684,12 @@
     <footer class="footer">
         <div class="container">
             <div class="footer_inner">
-                <div class="footer_col">
+                <div class="footer_col footer_col--first">
                     <div class="footer_logo">MoGo</div>
                     <div class="footer_text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        sed do <br> eiusmod tempor incididunt ut labore et dolore magna
+                        aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                         commodo consequat.</div>
                     <div class="footer_social">
                         <div class="footer_social-header">
@@ -727,7 +727,23 @@
                         <input class="subscribe_input" type="email" name="name" placeholder="Your Email...">
                         <button class="subscribe_btn" type="submit">subscribe</button>
                     </form>
+                </div> <!-- ./footer_col -->
+                <div class="footer_col footer_col--second">
+                    <div class="footer_title">Blogs</div>
+                    <div class="blogs">
+                        <div class="blogs_item">
+                            <img src="" alt="">
+                            <a href="#">Lorem ipsum dolor sit amet, 
+                                consectetur adipiscing</a>
+                                <div>Jan 9, 2016</div>
+                        </div>
+                    </div>
                 </div>
+                <div class="footer_col footer_col--third">
+
+                
+                <div class="footer_title">Intstagram</div>
+            </div>
             </div> <!-- ./footer_inner -->
 
         </div> <!-- ./container -->
