Ласт секция blogs/subscribes/blogs
Адаптация отсутствует

--- a/index.html
+++ b/index.html
@@ -689,7 +689,8 @@
                     <div class="footer_text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                         sed do <br> eiusmod tempor incididunt ut labore et dolore magna
-                        aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        aliqua. Ut enim<br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea
                         commodo consequat.</div>
                     <div class="footer_social">
                         <div class="footer_social-header">
@@ -732,19 +733,67 @@
                     <div class="footer_title">Blogs</div>
                     <div class="blogs">
                         <div class="blogs_item">
-                            <img src="" alt="">
-                            <a href="#">Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing</a>
-                                <div>Jan 9, 2016</div>
+                            <img class="blogs_img" src="../MoGo/images/images/blue.jpg" alt="">
+                            <div class="blogs_content">
+                                <a class="blogs_title" href="#">Consectetur adipiscing elit, 
+                                    sed do eiusmod tempor</a>
+                                <div class="blogs_date">Jan 9, 2016</div>
+                            </div>
                         </div>
-                    </div>
+                        <div class="blogs_item">
+                            <img class="blogs_img" src="../MoGo/images/images/yellow.jpg" alt="">
+                            <div class="blogs_content">
+                                <a class="blogs_title" href="#">Lorem ipsum dolor sit amet,
+                                    consectetur adipiscing</a>
+                                <div class="blogs_date">Jan 9, 2016</div>
+                            </div>
+                        </div>
+                        <div class="blogs_item">
+                            <img class="blogs_img" src="../MoGo/images/images/gray.jpg" alt="">
+                            <div class="blogs_content">
+                                <a class="blogs_title" href="#">sed do eiusmod tempor 
+                                    incididunt ut labore</a>
+                                <div class="blogs_date">Jan 9, 2016</div>
+                            </div>
+                        </div>
+                    </div> <!-- /.blogs -->
                 </div>
                 <div class="footer_col footer_col--third">
-
-                
-                <div class="footer_title">Intstagram</div>
-            </div>
+                    <div class="footer_title">Intstagram</div>
+                    <div class="instagram">
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/1.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/2.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/3.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/4.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/5.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/6.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/7.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/8.jpg" alt="">
+                        </a>
+                        <a class="instagram_item" href="#" target="_blank">
+                            <img src=".//images/instagram/9.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
             </div> <!-- ./footer_inner -->
+            <div class="copyright">
+                © 2016 MoGo free PSD template by <span>Laaqiq</span> 
+            </div>
 
         </div> <!-- ./container -->
     </footer>
