--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                     <a class="nav_link" href="#">Word</a>
                     <a class="nav_link" href="#">Blog</a>
                     <a class="nav_link" href="#">Contact</a>
+                    <a class="nav_link" href="#">
+                        <i class="fas fa-shopping-cart"></i>
+                    </a>
+
+                    <a class="nav_link" href="#">
+                        <i class="fas fa-search"></i>
+                    </a>
                 </nav>
             </div>
         </div>
