Адаптация - intro/stat/card

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../MoGo/css/style.css">
@@ -50,19 +51,19 @@
                 <div class="slider_inner">
                     <div class="slider_item active">
                         <span class="slider_num">01</span>
-                        Intro
+                        <span class="slider_text"> Intro</span>
                     </div>
                     <div class="slider_item">
                         <span class="slider_num">02</span>
-                        Work
+                        <span class="slider_text">Work</span>
                     </div>
                     <div class="slider_item">
                         <span class="slider_num">03</span>
-                        About
+                        <span class="slider_text"> About</span>
                     </div>
                     <div class="slider_item">
                         <span class="slider_num">04</span>
-                        Contacts
+                        <span class="slider_text"> Contacts</span>
                     </div>
                 </div>
             </div>
@@ -169,9 +170,6 @@
                     <div class="services_title">Creativity</div>
                     <div class="services_text">Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
-            </div>
-            <hr>
-            <div class="services">
                 <div class="services_item">
                     <img class="services_icon" src="../MoGo/images/services/seo.png" alt="">
 
@@ -191,10 +189,6 @@
                     <div class="services_text">Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
                 </div>
             </div>
-
-
-        </div>
-        </div>
         </div> <!-- /.container   -->
     </section>
 
@@ -742,7 +736,7 @@
                         <div class="blogs_item">
                             <img class="blogs_img" src="../MoGo/images/images/blue.jpg" alt="">
                             <div class="blogs_content">
-                                <a class="blogs_title" href="#">Consectetur adipiscing elit, 
+                                <a class="blogs_title" href="#">Consectetur adipiscing elit,
                                     sed do eiusmod tempor</a>
                                 <div class="blogs_date">Jan 9, 2016</div>
                             </div>
@@ -758,7 +752,7 @@
                         <div class="blogs_item">
                             <img class="blogs_img" src="../MoGo/images/images/gray.jpg" alt="">
                             <div class="blogs_content">
-                                <a class="blogs_title" href="#">sed do eiusmod tempor 
+                                <a class="blogs_title" href="#">sed do eiusmod tempor
                                     incididunt ut labore</a>
                                 <div class="blogs_date">Jan 9, 2016</div>
                             </div>
@@ -799,7 +793,7 @@
                 </div>
             </div> <!-- ./footer_inner -->
             <div class="copyright">
-                © 2016 MoGo free PSD template by <span>Laaqiq</span> 
+                © 2016 MoGo free PSD template by <span>Laaqiq</span>
             </div>
 
         </div> <!-- ./container -->
