Адаптация блока wedo

--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
                 <h2 class="section_title">Amazing Services</h2>
             </div>
             <div class="services">
-                <div class="services_item">
+                <div class="services_item service_item--border">
                     <img class="services_icon" src="../MoGo/images/services/photography.png" alt="">
 
                     <div class="services_title">Photography</div>
                     <div class="services_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor.</div>
                 </div>
-                <div class="services_item">
+                <div class="services_item service_item--border">
                     <img class="services_icon" src="../MoGo/images/services/webdesign.png" alt="">
 
                     <div class="services_title">Web Design</div>
                     <div class="services_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                     </div>
                 </div>
-                <div class="services_item">
+                <div class="services_item service_item--border">
                     <img class="services_icon" src="../MoGo/images/services/creativity.png" alt="">
 
                     <div class="services_title">Creativity</div>
@@ -176,13 +176,13 @@
                     <div class="services_title">seo</div>
                     <div class="services_text">Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</div>
                 </div>
-                <div class="services_item">
+                <div class="services_item service_item--border">
                     <img class="services_icon" src="../MoGo/images/services/css-html.png" alt="">
 
                     <div class="services_title">CSS/HTML</div>
                     <div class="services_text">Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</div>
                 </div>
-                <div class="services_item">
+                <div class="services_item service_item--border">
                     <img class="services_icon" src="../MoGo/images/services/digital.png" alt="">
 
                     <div class="services_title">digital</div>
@@ -225,7 +225,7 @@
 
             <div class="wedo">
                 <div class="wedo-item">
-                    <img src="../MoGo/images/mujik.png" alt="">
+                    <img class="wedo_img" src="../MoGo/images/mujik.png" alt="">
                 </div>
                 <div class="wedo-item">
                     <div class="accordion">
