--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header class="header">
+    <header class="header header--fixed">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">MoGo</div>
@@ -35,6 +35,9 @@
                         <i class="fas fa-search"></i>
                     </a>
                 </nav>
+                <div class="nav_toggle">
+                    <span class="nav-toogle_item" ></span>
+                </div>
             </div>
         </div>
     </header>
