--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header class="header header--fixed">
+    <header class="header">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">MoGo</div>
@@ -35,9 +35,9 @@
                         <i class="fas fa-search"></i>
                     </a>
                 </nav>
-                <div class="nav_toggle">
-                    <span class="nav-toogle_item" ></span>
-                </div>
+                <button class="nav_toggle" type="button">
+                    <span class="nav-toggle_item"></span>
+                </button>
             </div>
         </div>
     </header>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-        </div><!-- /.intro -->
+        </div> <!-- /.intro -->
         <section class="section">
             <div class="container">
                 <div class="section_header">
@@ -120,7 +120,7 @@
                     </div>
 
                 </div>
-            </div><!-- /.container   -->
+            </div> <!-- /.container   -->
         </section>
         <div class="statistics">
             <div class="container">
@@ -299,7 +299,7 @@
 
                         </div> <!-- ./accordion -->
                     </div> <!-- ./wedo_item -->
-                </div><!-- ./wedo -->
+                </div> <!-- ./wedo -->
 
             </div>
         </section>
@@ -343,7 +343,7 @@
                     <div class="card_item">
                         <div class="card_inner">
                             <div class="card_img">
-                                <img src="../MoGo/images/meet our team/Graphic Design.png" alt="">
+                                <img src="../MoGo/images/meet_our_team/Graphic_Design.png" alt="">
                             </div>
                             <div class="card_text">
                                 <div class="social">
@@ -371,7 +371,7 @@
                     <div class="card_item">
                         <div class="card_inner">
                             <div class="card_img">
-                                <img src="../MoGo/images/meet our team/BrandingUX design.png" alt="">
+                                <img src="../MoGo/images/meet_our_team/BrandingUX_design.png" alt="">
                             </div>
                             <div class="card_text">
                                 <div class="social">
@@ -399,7 +399,7 @@
                     <div class="card_item">
                         <div class="card_inner">
                             <div class="card_img">
-                                <img src="../MoGo/images/meet our team/Developer.png" alt="">
+                                <img src="../MoGo/images/meet_our_team/Developer.png" alt="">
                             </div>
                             <div class="card_text">
                                 <div class="social">
