Бургер меню с навигацией
Готовое бургер меню с навигацией, для дальнейших манипуляций

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                         <i class="fas fa-search"></i>
                     </a>
                 </nav>
-                <button class="nav_toggle" type="button">
-                    <span class="nav-toggle_item"></span>
+                <button class="nav_toggle active" type="button">
+                    <span class="nav-toggle_item">Menu</span>
                 </button>
             </div>
         </div>
