--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
 <body>
 
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header_inner">
                 <div class="header_logo">MoGo</div>
 
                 <nav class="nav">
-                    <a class="nav_link active" href="#">About</a>
+                    <a class="nav_link active" href="#" data-scroll="#about">About</a>
                     <a class="nav_link" href="#">Service</a>
                     <a class="nav_link" href="#">Word</a>
                     <a class="nav_link" href="#">Blog</a>
@@ -44,7 +44,7 @@
 
     <div class="page">
 
-        <div class="intro">
+        <div class="intro" id="intro">
             <div class="container">
                 <div class="intro_inner">
                     <h2 class="intro_suptitle">Creative Template</h2>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div> <!-- /.intro -->
-        <section class="section">
+        <section class="section" id="about">
             <div class="container">
                 <div class="section_header">
                     <h3 class="section_suptitle">What we do</h3>
@@ -830,6 +830,15 @@
             </div> <!-- ./container -->
         </footer>
     </div> <!-- /.page -->
+
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../MoGo/js/app.js"></script>
+
+
+
+
 
 </body>
 
