Скроллинг по секциям

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
                 <nav class="nav">
                     <a class="nav_link active" href="#" data-scroll="#about">About</a>
-                    <a class="nav_link" href="#">Service</a>
-                    <a class="nav_link" href="#">Word</a>
-                    <a class="nav_link" href="#">Blog</a>
-                    <a class="nav_link" href="#">Contact</a>
+                    <a class="nav_link" href="#" data-scroll="#services">Service</a>
+                    <a class="nav_link" href="#" data-scroll="#works">Work</a>
+                    <a class="nav_link" href="#" data-scroll="#blog">Blog</a>
+                    <a class="nav_link" href="#" data-scroll="#footer">Contact</a>
                     <a class="nav_link" href="#">
                         <i class="fas fa-shopping-cart"></i>
                     </a>
@@ -77,6 +77,8 @@
                 </div>
             </div>
         </div> <!-- /.intro -->
+
+        <!-- About -->
         <section class="section" id="about">
             <div class="container">
                 <div class="section_header">
@@ -122,6 +124,8 @@
                 </div>
             </div> <!-- /.container   -->
         </section>
+
+        <!-- Statistic -->
         <div class="statistics">
             <div class="container">
 
@@ -150,7 +154,9 @@
 
             </div>
         </div>
-        <section class="section">
+
+        <!-- Services -->
+        <section class="section" id="services">
             <div class="container">
                 <div class="section_header">
                     <h3 class="section_suptitle">We work with</h3>
@@ -205,6 +211,7 @@
         </section>
 
 
+        <!-- Divices -->
         <section class="section section--devices">
             <div class="container">
                 <div class="section_header">
@@ -219,7 +226,7 @@
         </section>
 
 
-
+        <!-- Wedo -->
         <section class="section">
             <div class="container">
 
@@ -305,6 +312,7 @@
         </section>
 
 
+        <!-- Reviews 1 -->
         <div class="section section--gray">
             <div class="container">
 
@@ -325,6 +333,7 @@
             </div>
         </div>
 
+        <!-- Team -->
         <section class="section">
             <div class="container">
                 <div class="section_header">
@@ -427,6 +436,7 @@
             </div> <!-- /.container -->
         </section>
 
+        <!-- Logos -->
         <div class="section section--gray">
             <div class="container">
 
@@ -452,7 +462,10 @@
                 </div>
             </div>
         </div>
-        <section class="section">
+
+
+        <!-- Works -->
+        <section class="section" id="works">
             <div class="container">
                 <div id="mind_text" class="section_header">
                     <h3 class="section_suptitle">What we do copy</h3>
@@ -549,6 +562,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Clients -->
         <section class="section section--clients">
             <div class="container">
                 <div id="mind_text" class="section_header">
@@ -598,7 +613,9 @@
             </div> <!-- /.container  -->
 
         </section>
-        <section class="section">
+
+        <!-- Blog -->
+        <section class="section" id="blog">
             <div class="container">
                 <div id="mind_text" class="section_header">
                     <h3 class="section_suptitle">Our stories</h3>
@@ -698,6 +715,8 @@
                 </div> <!-- /.blog -->
             </div> <!-- /.container -->
         </section>
+
+        <!-- Map -->
         <section class="section section--map">
             <div class="container">
                 <div class="map">
@@ -712,7 +731,8 @@
 
 
 
-        <footer class="footer">
+        <!-- Footer -->
+        <footer class="footer" id="footer">
             <div class="container">
                 <div class="footer_inner">
                     <div class="footer_col footer_col--first">
